# Placement-Course-cpp

./: .gitignore  10_2_largest_word_in_a_sentence.cpp  13_1_strings.cpp  13_2_1_change_case.cpp  14_2_3_number_of_binary_ones.cpp  14_3_2_two_unique_numbers_in_an_Array.cpp  15_2_1_inclusion_exclusion_principle.cpp  15_2_2_euclid_algorithm_to_find_GCD.cpp  16_1_1_sum_till_n.cpp  16_1_2_power.cpp  16_1_3_factorial.cpp  16_1_5_print_nth_fibonacci_number.cpp  16_2_1_check_for_sorted_Array_using_recursion.cpp  16_2_2_print_numbers_till_n.cpp  16_2_3_first_and_last_occurence_of_number_in_an_Array.cpp  16_3_2_replace_pi_with_3.14.cpp  16_3_4_remove_duplicate_from_strings.cpp  16_3_7_all_substring_with_ascii_number.cpp  16_4_1_print_all_permutations_of_a_string.cpp  16_4_2_gameboard.cpp  16_4_3_knapsack_problem.cpp  17_1_permutation.cpp  18_1_ratmaze.cpp  18_2_N_queen_problem.cpp  19_0_vectors_and_pairs.cpp  19_1_merge_sorrt.cpp  1_start_.cpp  20_1_count_sort.cpp  20_2_DNF_Sort.cpp  20_3_wave_sort.cpp  21_1_1_oops_intro.cpp  21_2_encapsulation.cpp  21_3_2_multiple_level_inheritance.cpp  21_3_3_multi_level_inheritance.cpp  21_4_1_polymorphism_function_overloading.cpp  21_4_3_virtual_function.cpp  22_10_circular_linked_list.cpp  22_2_deletion_in_linked_list.cpp  22_3_1_reverse_a_linked_list_iterator_method.cpp  22_5_detection_and_removal_of_cycle.cpp  (+64 more)
.cph/: .10_1_pallindrome_string.cpp_5b252ff49c6704d2eca3ce4463c71ba9.prob  .10_2_largest_word_in_a_sentence.cpp_c5b70e78ca8e065eb2c094426aeace0f.prob  .11_1_pointers_and_arrays.cpp_832b4d017c7035f669e357c2e98944e6.prob  .11_2_pointers_to_pointer.cpp_7f658fe20ab93245dd7b703d256da600.prob  .11_3_pointers_to_function.cpp_494ba660b670fd6c04ee35ebc5a9cb56.prob  .12_stack_and_heap.cpp_c8e0bc4cfbd65516d48a3010f0d06dea.prob  .13_1_strings.cpp_96e20cf211c1c4c073616b47ae3aa4f0.prob  .13_2_1_change_case.cpp_1ba7f8e47270f5e802b83e55a67a089f.prob  .13_2_2_form_the_biggest_number_from_numeric_string.cpp_8baf30d82b99243d284c3a9d9f6bd230.prob  .13_2_3_maximum_frequency_of_character.cpp_de99da2e60a454f61efa2bee5f4ce0da.prob  .14_1_Bit_Manupilation.cpp_29fa5fa0753cc0d8f6bd0f014317ae6c.prob  .14_2_3_number_of_binary_ones.cpp_f297ec690b0a374a81de1bc0921f42a4.prob  .14_2_5_print_subsets.cpp_39b7fe426108177504ec19e014b25439.prob  .14_2_to_check_whether_the_number_is_the_power_of_two_bit_manipulation.cpp_498c4f0e7accfa6cd6b23f5ad7387fd2.prob  .14_3_1_find_unique_number_in_Array.cpp_710d624732afd4527a57dcebf40c9656.prob  .14_3_2_two_unique_numbers_in_an_Array.cpp_e8994781b9367a9cee7ffe47477a81d9.prob  (+138 more)
Prep/: main.cpp  (+2 more)
(+1164 files in other folders)
