cmake_minimum_required(VERSION 3.20)
project(Placement_cource_c___)

set(CMAKE_CXX_STANDARD 14)

add_executable(Placement_cource_c___
        10_1_pallindrome_string.cpp
        10_2_largest_word_in_a_sentence.cpp
        11_1_pointers_and_arrays.cpp
        11_2_pointers_to_pointer.cpp
        11_3_pointers_to_function.cpp
        1_start_.cpp
        2_1_data_types.cpp
        2_2input_output.cpp
        2_3_if_else.cpp
        2_4_loops.cpp
        3_1_1_break_and_continue.cpp
        3_1_2_Prime_Number.cpp
        3_1_3_Prime_Numbers_in_a_range.cpp
        3_2_1_Switch.cpp
        3_3_1_Operators.cpp
        3_3_2_BitwiseOperator.cpp
        3_3_3_BitwiseUnaryOperator.cpp
        4_1_1_Rectangle.cpp
        4_1_2_HollowRectangle.cpp
        4_1_3_Inverted_Half_Pyramid.cpp
        4_1_4_Half_Pyramid_180deg_rotation.cpp
        4_1_5_Half_Pyramid_Using_Numbers.cpp
        4_1_6_Floyds_Triangle.cpp
        4_1_7_ButterFlyPattern.cpp
        5_1_1_Binary.cpp
        5_2_1_Prime.cpp
        5_2_2_Reverse_A_number.cpp
        5_2_3_armstrong_number.cpp
        6_1_1_function.cpp
        6_2_1_prime_in_a_range.cpp
        6_2_3_PrintFibonacci.cpp
        6_2_4_nCr.cpp
        6_2_5_Pascal_Triangle.cpp
        6_3_1_sum_of_n_natural_numbers.cpp
        6_3_2_Pythagorian_triplet.cpp
        6_3_3_BinaryToDecimal.cpp
        6_3_4_DecimalToBInary.cpp
        6_3_5_octalToDecimal.cpp
        6_3_6_hexatoDecimal.cpp
        8_1_1_Arrays.cpp
        8_1_2_Max_and_min_element.cpp
        8_2_1_linearSearch.cpp
        8_2_2_binarySearch.cpp
        8_3_1_Selection_Sort.cpp
        8_3_2_Bubble_sort.cpp
        8_3_3_InsertionSort.cpp
        8_4_1_max_till_i.cpp
        8_4_2_sum_of_all_subarrays.cpp
        8_4_3_longest_arithmatic_subarray.cpp
        8_4_4_Record_Breaker.cpp
        8_5_1_First_Repeating_Element.cpp
        8_5_2_subarray_with_given_sum.cpp
        8_5_3_Smallest_positive_missing_number.cpp
        8_6_1_Priniting_all_subarrays.cpp
        8_6_2_maximum_subarray_sum_brute_force.cpp
        8_6_3_maximum_subarray_sum_commulative_subarray_approach.cpp
        8_6_4_Kadanes_algorithm.cpp
        8_6_5_maximum_circular_subarray_sum.cpp
        8_6_6_pairsum_problem.cpp
        8_6_7_pairsum_problem_optimized.cpp
        9_1_1_Two_Dimentional_Array.cpp
        9_1_3_Spiral_order_matrix.cpp
        9_2_1_Transpose_of_matrix.cpp
        9_2_2_matrix_multiplication.cpp
        9_2_3_matrix_search_optimized.cpp)
